--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>來猜歌吧！｜送舊活動互動猜歌遊戲</title>
+  <title>大家一起猜歌吧</title>
   <style>
     :root{
       --bg:#0b1020;
