--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>大家一起猜歌吧</title>
+  <title>來猜歌吧！｜送舊活動互動猜歌遊戲</title>
   <style>
     :root{
-      --bg:#1a2858;
+      --bg:#0b1020;
       --card:#121a33;
       --card2:#0f1730;
       --text:#eaf0ff;
